src/main/java/com/example/coupon_api/Error/exceptions/NotFoundException.java
package com.example.coupon_api.Error.exceptions;

public class NotFoundException extends RuntimeException{

    public NotFoundException() {
    }

    public NotFoundException(String message) {
        super(message);
    }
}
